@@ -3,6 +3,7 @@ package uk.gov.hmcts.reform.pcs.ccd.service;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.pcs.ccd.domain.NoticeServedDetails;
 import uk.gov.hmcts.reform.pcs.ccd.domain.PCSCase;
+import uk.gov.hmcts.reform.pcs.ccd.domain.RentArrearsSection;
 import uk.gov.hmcts.reform.pcs.ccd.domain.TenancyLicence;
 import uk.gov.hmcts.reform.pcs.ccd.domain.TenancyLicenceDetails;
 import uk.gov.hmcts.reform.pcs.ccd.domain.WalesHousingAct;
@@ -27,15 +28,13 @@ public class TenancyLicenceService {
                     ? tenancyDetails.getDetailsOfOtherTypeOfTenancyLicence() : null)
             .supportingDocuments(ListValueUtils.unwrapListItems(
                     tenancyDetails != null ? tenancyDetails.getTenancyLicenceDocuments() : null))
-            .rentStatementDocuments(ListValueUtils.unwrapListItems(pcsCase.getRentStatementDocuments()))
-            .totalRentArrears(pcsCase.getTotalRentArrears())
-            .thirdPartyPaymentSources(pcsCase.getThirdPartyPaymentSources())
-            .thirdPartyPaymentSourceOther(pcsCase.getThirdPartyPaymentSourceOther())
             .arrearsJudgmentWanted(YesOrNoToBoolean.convert(pcsCase.getArrearsJudgmentWanted()));
 
         buildRentSection(pcsCase.getRentDetails(), tenancyLicenceBuilder);
 
         tenancyLicenceBuilder.noticeServed(YesOrNoToBoolean.convert(pcsCase.getNoticeServed()));
+
+        buildRentArrearsSection(pcsCase.getRentArrears(), tenancyLicenceBuilder);
 
         buildNoticeServedDetails(pcsCase.getNoticeServedDetails(), tenancyLicenceBuilder);
 
@@ -74,6 +73,17 @@ public class TenancyLicenceService {
             }
         }
         return null;
+    }
+
+    private void buildRentArrearsSection(RentArrearsSection rentArrears,
+                                         TenancyLicence.TenancyLicenceBuilder tenancyLicenceBuilder) {
+        if (rentArrears != null) {
+            tenancyLicenceBuilder
+                    .rentStatementDocuments(ListValueUtils.unwrapListItems(rentArrears.getStatementDocuments()))
+                    .totalRentArrears(penceToPounds(rentArrears.getTotal()))
+                    .thirdPartyPaymentSources(rentArrears.getThirdPartyPaymentSources())
+                    .thirdPartyPaymentSourceOther(rentArrears.getThirdPartyPaymentSourceOther());
+        }
     }
 
     private void buildNoticeServedDetails(NoticeServedDetails noticeServedDetails,
@@ -140,7 +150,7 @@ public class TenancyLicenceService {
     }
 
     private static BigDecimal penceToPounds(String pence) {
-        if (pence == null || pence.trim().isEmpty()) {
+        if (pence == null || pence.isBlank()) {
             return null;
         }
         return new BigDecimal(pence).movePointLeft(2);
